@@ -404,9 +404,9 @@ proc toggleGrid {setvar} {
     }
 
     if {$config(snaptogrid)} {
-        $gned(toolbar).grid config -relief sunken
+        $gned(graphics-toolbar).grid config -relief sunken
     } else {
-        $gned(toolbar).grid config -relief raised
+        $gned(graphics-toolbar).grid config -relief raised
     }
 }
 
